--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,139 @@
 body{
-    background-image: url(assets/sky.jpg);
-    background-color: red;
-    background-size: cover;
-    display:flex;
     justify-content: center;
-    align-items: baseline;
 }
-#input_field{
-    position:absolute;
-    top:40px;
-left:570px;
-    margin-top:20px;
-    transform: scale(1.5);
-    border-radius: 10px;
-}
-#submit_btn{
-    position: absolute;
-    margin-left: 15px;
-    color: red;
-    background-image: url(assets/search.png);
-    background-size:cover;
-    background-position: center;
-    border: none;
-    height:30px;
- border-radius: 50px;
- transition: 0.1s ;
-}
-#result_div{
-    position: relative;
-    border: 2px solid rgb(30, 27, 218);
-transform: scale(1.4);
-border-radius: 20px;
-text-shadow: 1px 1px 5px black;
-    cursor: default;
-    top:100px;
-align-items: center;
-text-align: center;
-box-shadow: 3px 3px 10px rgb(80, 43, 247);
-transition: 0.1s;
-}
-#input{
-    position: relative;
-left:10px;
-}
-#submit_btn:hover{
-    transform: scale(0.9);
-}
-#result_div:hover{
-   box-shadow: inset 2px 2px 5px white;
+.calculator_div{
+    display: grid;
+    grid-template-columns: repeat(3,0.25fr);
+    grid-template-rows: repeat(3,0.2fr);
+    width: 45vh;
+    height: 74vh;
+    background-color: darkgoldenrod;
+    justify-content:first baseline;
+    align-items: center;
+    text-align: center;
+    border: 3px solid rgb(0, 68, 255);
+    border-radius: 30px;
+    overflow: hidden;
+    grid-gap: 5px; /* adjust this value to increase or decrease the gap between cells */
+    box-shadow: 3px 3px 10px black ;
 }
 
+.box {
+    font-weight: 800;
+    top:180px;
+    display: grid;
+    position: relative;
+    border: 1px solid rgb(1, 1, 7);
+    background-color: black;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin: 0;
+  left:1px;
+  cursor: default;
+}
+.search{
+    position:absolute;
+    top:100px;
+    background-color: rgba(44, 44, 44, 0.836);
+   color:white;
+  box-shadow: 3px 3px 5px rgb(19, 18, 18);
+    width:44vh;
+    margin-left: 1.2px;
+    height: 45px;
+    overflow: hidden;
+    border-radius: 10px;
+cursor: default;
+}
+.equal{
+    position: absolute;
+   display: flex;
+   text-align: center;
+   align-items: center;
+   justify-content: center;
+   background-color:rgb(212, 9, 9);
+   color: white;
+    border-radius: 30px;
+    font-size: xx-large;
+   left:122vh;
+   top:474px;
+    width: 50px;
+    height: 50px;
+    cursor: default;
+}
+.results{
+    position: relative;
+ display: flex;
+ color: white;
+ font-size:xx-large;
+  top:0px;
+ overflow-x: hidden;
+}
+.plus{
+    position: absolute;
+    display: flex;
+    color: white;
+    font-size:xx-large;
+     top:410px;
+     left:122vh;
+    overflow-x: hidden;
+    background-color: rgb(255, 6, 6);
+    border-radius: 30px;
+    width:50px;
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+   cursor: default;
+}
+.multiply{
+    position: absolute;
+    display: flex;
+    color: white;
+    font-size:xx-large;
+     top:346px;
+     left:122vh;
+    overflow-x: hidden;
+    background-color: rgb(255, 6, 6);
+    border-radius: 30px;
+    width:50px;
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+   cursor: default;
+}
+.minus{
+    position: absolute;
+    display: flex;
+    color: white;
+    font-size:xx-large;
+     top:282px;
+     left:122vh;
+    overflow-x: hidden;
+    background-color: rgb(255, 6, 6);
+    border-radius: 30px;
+    width:50px;
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+   cursor: default;
+}
+.clear{
+    position: absolute;
+    display: flex;
+    color: white;
+    font-size:xx-large;
+     top:218px;
+     left:122vh;
+    overflow-x: hidden;
+    background-color: rgb(12, 34, 228);
+    border-radius: 30px;
+    width:50px;
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+   cursor: default;
+}
